feat: Update UefaCCSimTest to increase repetition count and improve duplicate tie verification logic